CP Practice - 2nd Aug 2024, Fix GH Action
GH Action error: Docker compose not found

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -3543,7 +3543,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71dfb132",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def decoding_genome_brute(N: int, M: int, k: int, forbidden: set[str]) -> int:\n",
@@ -3563,6 +3565,244 @@
     "assert decoding_genome_brute(3, 3, 2,  {\"ab\", \"ba\"}) == 17\n",
     "assert decoding_genome_brute(3, 3, 0, set()) == 27\n",
     "assert decoding_genome_brute(2, 1, 1, {\"aa\"}) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eed8cc7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def decoding_genome(N: int, M: int, k: int, forbidden: set[str]) -> int:\n",
+    "    def ch2int(ch: str) -> int:\n",
+    "        ord_ = ord(ch)\n",
+    "        if ord('a') <= ord_ <= ord('z'):\n",
+    "            return ord_ - ord('a')\n",
+    "        else:\n",
+    "            return ord_ - ord('A') + 26\n",
+    "\n",
+    "    def matrix_multiply(A: list[list[int]], B: list[list[int]], mod: int) -> list[list[int]]:\n",
+    "        # (M x N) . (P x Q) => (M x Q)\n",
+    "        M, N, P, Q = len(A), len(A[0]), len(B), len(B[0])\n",
+    "        assert N == P, f\"Matrices of invalid dimensions provided, got: {(M, N), (P, Q)}\"\n",
+    "        result: list[list[int]] = [[0 for j in range(Q)] for i in range(M)]\n",
+    "\n",
+    "        for i in range(M):\n",
+    "            for j in range(Q):\n",
+    "                for k in range(N):\n",
+    "                    result[i][j] = (result[i][j] + A[i][k] * B[k][j]) % mod\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    def matrix_power(base: list[list[int]], power: int, mod: int) -> list[list[int]]:\n",
+    "        N = len(matrix)\n",
+    "        result: list[list[int]] = [[1 if i == j else 0 for j in range(N)] for i in range(N)]\n",
+    "\n",
+    "        while power:\n",
+    "            if power & 1:\n",
+    "                result = matrix_multiply(result, base, mod)\n",
+    "            base = matrix_multiply(base, base, mod)\n",
+    "            power >>= 1\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    # We need answer modulo 1e9 + 7\n",
+    "    MOD = 10**9 + 7\n",
+    "\n",
+    "    # Get the transition matrix\n",
+    "    matrix: list[list[int]] = [[1 for j in range(M)] for i in range(M)]\n",
+    "    for pair in forbidden:\n",
+    "        ord1, ord2 = ch2int(pair[0]), ch2int(pair[1])\n",
+    "        matrix[ord1][ord2] = 0\n",
+    "\n",
+    "    # Raise tran matrix to power N - 1\n",
+    "    result_matrix = matrix_power(matrix, N - 1, MOD)\n",
+    "\n",
+    "    # Result is sum of all cells\n",
+    "    return sum(sum(row) % MOD for row in result_matrix) % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert decoding_genome(3, 3, 2,  {\"ab\", \"ba\"}) == 17\n",
+    "assert decoding_genome(3, 3, 0, set()) == 27\n",
+    "assert decoding_genome(2, 1, 1, {\"aa\"}) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e494e8ed",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def random_mood(N: int, P: float) -> float:\n",
+    "    switch, no_switch = P, 1 - P\n",
+    "    happy, sad = 1., 0.\n",
+    "    while N:\n",
+    "        if N & 1:\n",
+    "            happy, sad = (happy * no_switch + sad * switch), (happy * switch + sad * no_switch)\n",
+    "        switch, no_switch = switch * no_switch + no_switch * switch, switch * switch + no_switch * no_switch\n",
+    "        N >>= 1\n",
+    "\n",
+    "    return happy\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert math.isclose(random_mood(11, 0.06), 0.6225404294, abs_tol=1e-6)\n",
+    "assert math.isclose(random_mood(2, 0.1), 0.82, abs_tol=1e-6)\n",
+    "assert math.isclose(random_mood(1, 0.7), 0.3, abs_tol=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd21680c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def string_mood_brute(N: int) -> int:\n",
+    "    MOD = 10 ** 9 + 7\n",
+    "    sad, happy = 0, 1\n",
+    "    for length in range(N):\n",
+    "        sad_, happy_ = 0, 0\n",
+    "        for ord_ in range(26):\n",
+    "            ch = chr(ord('A') + ord_)\n",
+    "            if ch == 'H':\n",
+    "                sad_ = (sad_ + happy) % MOD\n",
+    "                happy_ = (happy_ + happy) % MOD\n",
+    "            elif ch in ('S', 'D'):\n",
+    "                sad_ = (sad_ + sad) % MOD\n",
+    "                happy_ = (happy_ + sad) % MOD\n",
+    "            elif ch in ('A', 'E', 'I', 'O', 'U'):\n",
+    "                sad_ = (sad_ + happy) % MOD\n",
+    "                happy_ = (happy_ + sad) % MOD\n",
+    "            else:\n",
+    "                sad_ = (sad_ + sad) % MOD\n",
+    "                happy_ = (happy_ + happy) % MOD\n",
+    "        sad, happy = sad_, happy_\n",
+    "\n",
+    "    return happy\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert string_mood_brute(1) == 19\n",
+    "assert string_mood_brute(2) == 403\n",
+    "assert string_mood_brute(11) == 145418665"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eab6e22",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def string_mood_better(N: int) -> int:\n",
+    "    MOD = 10 ** 9 + 7\n",
+    "\n",
+    "    sad, happy = 0, 1\n",
+    "    for length in range(N):\n",
+    "        sad_ = (6 * happy) + (20 * sad)\n",
+    "        happy_ = (7 * sad) + (19 * happy)\n",
+    "        sad, happy = sad_, happy_\n",
+    "\n",
+    "    return happy % MOD\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert string_mood_better(1) == 19\n",
+    "assert string_mood_better(2) == 403\n",
+    "assert string_mood_better(11) == 145418665"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68f2affb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def string_mood(N: int) -> int:\n",
+    "    def matrix_multiply(A: list[list[int]], B: list[list[int]], mod: int) -> list[list[int]]:\n",
+    "        M, N, P, Q = len(A), len(A[0]), len(B), len(B[0])\n",
+    "        assert N == P, \"Matrix dimensions are incorrect\"\n",
+    "        result: list[list[int]] = [[0 for j in range(Q)] for i in range(M)]\n",
+    "        for i in range(M):\n",
+    "            for j in range(Q):\n",
+    "                for k in range(N):\n",
+    "                    result[i][j] = (result[i][j] + A[i][k] * B[k][j]) % mod\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    def matrix_power(base: list[list[int]], exp: int, mod: int) -> list[list[int]]:\n",
+    "        N = len(base)\n",
+    "        result: list[list[int]] = [[1 if i == j else 0 for j in range(N)] for i in range(N)]\n",
+    "        while exp:\n",
+    "            if exp & 1:\n",
+    "                result = matrix_multiply(result, base, mod)\n",
+    "            base = matrix_multiply(base, base, mod)\n",
+    "            exp >>= 1\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    # Sad, Happy\n",
+    "    base: list[list[int]] = [[20, 6], [7, 19]]\n",
+    "    result: list[list[int]] = matrix_power(base, N, 10 ** 9 + 7)\n",
+    "\n",
+    "    return result[1][1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert string_mood(1) == 19\n",
+    "assert string_mood(2) == 403\n",
+    "assert string_mood(11) == 145418665"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ea9acb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibo(N: int) -> int:\n",
+    "    def matrix_multiply(A: list[list[int]], B: list[list[int]], mod: int) -> list[list[int]]:\n",
+    "        M, N, P, Q = len(A), len(A[0]), len(B), len(B[0])\n",
+    "        assert N == P, \"matrix dimensions are incorrect\"\n",
+    "        result: list[list[int]] = [[0 for j in range(Q)] for i in range(M)]\n",
+    "        for i in range(M):\n",
+    "            for j in range(Q):\n",
+    "                for k in range(N):\n",
+    "                    result[i][j] = (result[i][j] + A[i][k] * B[k][j]) % mod\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    def matrix_exp(base: list[list[int]], exp: int, mod: int) -> list[list[int]]:\n",
+    "        N = len(base)\n",
+    "        result: list[list[int]] = [[1 if i == j else 0 for j in range(N)] for i in range(N)]\n",
+    "        while exp:\n",
+    "            if exp & 1:\n",
+    "                result = matrix_multiply(result, base, mod)\n",
+    "            base = matrix_multiply(base, base, mod)\n",
+    "            exp >>= 1\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    base: list[list[int]] = [[0, 1], [1, 1]]\n",
+    "    result: list[list[int]] = matrix_exp(base, N, 998244353)\n",
+    "    return result[1][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert fibo(0) == 0\n",
+    "assert fibo(1234) == 4936310\n",
+    "assert fibo(345639696828452375) == 213237811\n",
+    "assert fibo(419384601238473729475639183948326177846782649592628790267300203877) == 389871463"
    ]
   }
  ],
