CP Practice - 6th Aug 2024

--- a/practice/007.ipynb
+++ b/practice/007.ipynb
@@ -1359,6 +1359,7 @@
      "iopub.status.idle": "2024-08-05T13:54:07.103771Z",
      "shell.execute_reply": "2024-08-05T13:54:07.103342Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009597,
      "end_time": "2024-08-05T13:54:07.104790",
@@ -1391,6 +1392,102 @@
     "assert kthDistinct([\"d\",\"b\",\"c\",\"b\",\"c\",\"a\"], k = 2) == \"a\"\n",
     "assert kthDistinct([\"aaa\",\"aa\",\"a\"], k = 1) == \"aaa\"\n",
     "assert kthDistinct([\"a\",\"b\",\"a\"], k = 3) == \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48746f93",
+   "metadata": {},
+   "source": [
+    "Striver's CP Sheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8154c4b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def wet_shark_and_blocks_brute(N: int, B: int, K: int, X: int, nums: list[int]) -> int:\n",
+    "    # Return ans mod\n",
+    "    MOD = 10 ** 9 + 7\n",
+    "\n",
+    "    # Convert block of nums into freq\n",
+    "    freq: list[int] = [0 for i in range(10)]\n",
+    "    for n in nums:\n",
+    "        freq[n] += 1\n",
+    "\n",
+    "    # return backtrack(0, 0)\n",
+    "    dp: list[int] = [0 if i != K else 1 for i in range(X)]\n",
+    "    for blocks in range(B):\n",
+    "        next_dp: list[int] = [0 for i in range(X)]\n",
+    "        for total in range(X):\n",
+    "            for next_ in range(1, 10):\n",
+    "                next_dp[total] = (next_dp[total] + freq[next_] * dp[(total * 10 + next_) % X]) % MOD\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return dp[K]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert wet_shark_and_blocks_brute(12, 1, 5, 10, [3,5,6,7,8,9,5,1,1,1,1,5]) == 3\n",
+    "assert wet_shark_and_blocks_brute(3, 2, 1, 2, [6,2,2]) == 0\n",
+    "assert wet_shark_and_blocks_brute(3, 2, 1, 2, [3,1,2]) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "312b4d88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wet_shark_and_blocks(N: int, B: int, K: int, X: int, nums: list[int]) -> int:\n",
+    "    def matrix_multiply(A: list[list[int]], B: list[list[int]], mod: int) -> list[list[int]]:\n",
+    "        M, N, P, Q = len(A), len(A[0]), len(B), len(B[0])\n",
+    "        assert N == P, \"Invalid dimensions provided.\"\n",
+    "        result: list[list[int]] = [[0 for j in range(Q)] for i in range(M)]\n",
+    "        for i in range(M):\n",
+    "            for j in range(Q):\n",
+    "                for k in range(N):\n",
+    "                    result[i][j] = (result[i][j] + A[i][k] * B[k][j]) % mod\n",
+    "        return result\n",
+    "\n",
+    "    def matrix_power(base: list[list[int]], exp: int, mod: int) -> list[list[int]]:\n",
+    "        N = len(base)\n",
+    "        result: list[list[int]] = [[1 if i == j else 0 for j in range(N)] for i in range(N)]\n",
+    "        while exp:\n",
+    "            if exp & 1:\n",
+    "                result = matrix_multiply(result, base, mod)\n",
+    "            base = matrix_multiply(base, base, mod)\n",
+    "            exp >>= 1\n",
+    "        return result\n",
+    "\n",
+    "    # Answer can be very large\n",
+    "    MOD = 10 ** 9 + 7\n",
+    "\n",
+    "    # Create a freq array\n",
+    "    freq: list[int] = [0 for i in range(10)]\n",
+    "    for n in nums:\n",
+    "        freq[n] += 1\n",
+    "\n",
+    "    # Create transformation matrix\n",
+    "    base: list[list[int]] = [[0 for j in range(X)] for i in range(X)]\n",
+    "    for total in range(X):\n",
+    "        for next_ in range(1, 10):\n",
+    "            new_total = (total * 10 + next_) % X\n",
+    "            base[new_total][total] = (base[new_total][total] + freq[next_]) % MOD\n",
+    "\n",
+    "    result = matrix_power(base, B, MOD)\n",
+    "    return result[K][0]\n",
+    "\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert wet_shark_and_blocks(12, 1, 5, 10, [3,5,6,7,8,9,5,1,1,1,1,5]) == 3\n",
+    "assert wet_shark_and_blocks(3, 2, 1, 2, [6,2,2]) == 0\n",
+    "assert wet_shark_and_blocks(3, 2, 1, 2, [3,1,2]) == 6"
    ]
   }
  ],
