CF: Div 4 - 6th Aug 2024

--- a/practice/007.ipynb
+++ b/practice/007.ipynb
@@ -1471,6 +1471,7 @@
      "iopub.status.idle": "2024-08-06T04:04:09.568534Z",
      "shell.execute_reply": "2024-08-06T04:04:09.568000Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.01424,
      "end_time": "2024-08-06T04:04:09.569522",
@@ -1526,6 +1527,108 @@
     "assert wet_shark_and_blocks(12, 1, 5, 10, [3,5,6,7,8,9,5,1,1,1,1,5]) == 3\n",
     "assert wet_shark_and_blocks(3, 2, 1, 2, [6,2,2]) == 0\n",
     "assert wet_shark_and_blocks(3, 2, 1, 2, [3,1,2]) == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "707e34d3",
+   "metadata": {},
+   "source": [
+    "#### CF Div 4 - 6th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "764c8eb8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def digit_sum(n: int) -> int:\n",
+    "    return n // 10 + n % 10\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert digit_sum(77) == 14\n",
+    "assert digit_sum(10) == 1\n",
+    "assert digit_sum(48) == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77241705",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def card_game(a1: int, a2: int, b1: int, b2: int) -> int:\n",
+    "    count = 0\n",
+    "    if (a1 > b1 and a2 >= b2) or (a2 > b2 and a1 >= b1):\n",
+    "        count += 2\n",
+    "    if (a1 > b2 and a2 >= b1) or (a2 > b1 and a1 >= b2):\n",
+    "        count += 2\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert card_game(3, 8, 2, 6) == 2\n",
+    "assert card_game(1, 1, 1, 1) == 0\n",
+    "assert card_game(10, 10, 2, 2) == 4\n",
+    "assert card_game(1, 1, 10, 10) == 0\n",
+    "assert card_game(3, 8, 7, 2) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c499f00c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def showering(N: int, S: int, M: int, tasks: list[tuple[int, int]]) -> bool:\n",
+    "    tasks.sort()\n",
+    "    prev_end = 0\n",
+    "    for start, end in tasks:\n",
+    "        if start - prev_end >= S:\n",
+    "            return True\n",
+    "        prev_end = end\n",
+    "\n",
+    "    return M - prev_end >= S\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert showering(3, 3, 10, [(3,5), (6,8), (9,10)]) == True\n",
+    "assert showering(3, 3, 10, [(1,2), (3,5), (6,7)]) == True\n",
+    "assert showering(3, 3, 10, [(1,2), (3,5), (6,8)]) == False\n",
+    "assert showering(3, 4, 10, [(1,2), (6,7), (8,9)]) == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb7a6df0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def slavic_exam(S: str, T: str) -> str:\n",
+    "    i, j, s_length, t_length = 0, 0, len(S), len(T)\n",
+    "    result: list[str] = []\n",
+    "    for i in range(s_length):\n",
+    "        result.append(S[i] if S[i] != \"?\" else T[j] if j < t_length else \"a\")\n",
+    "        if j < t_length and (S[i] == T[j] or S[i] == \"?\"):\n",
+    "            j += 1\n",
+    "\n",
+    "    return \"\".join(result) if j == t_length else \"\"\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert slavic_exam(\"?????\", \"xbx\") == \"xbxaa\"\n",
+    "assert slavic_exam(\"ab??e\", \"abcde\") == \"abcde\"\n",
+    "assert slavic_exam(\"ayy?x\", \"a\") == \"ayyax\"\n",
+    "assert slavic_exam(\"ab??e\", \"dac\") == \"\"\n",
+    "assert slavic_exam(\"paiu\", \"mom\") == \"\""
    ]
   }
  ],
