--- a/practice/007.ipynb
+++ b/practice/007.ipynb
@@ -2582,6 +2582,111 @@
     "assert equal_sum_subarrays_test([1,2,3,4,5], [3,5,4,2,1])\n",
     "assert equal_sum_subarrays_test([4,7,5,1,2,6,3], [6,2,1,4,7,3,5])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72f61e90",
+   "metadata": {},
+   "source": [
+    "Leetcode weekly - 11th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b91d29d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def finalPositionOfSnake(N: int, commands: list[str]) -> int:\n",
+    "    i = j = 0\n",
+    "    for command in commands:\n",
+    "        if command == \"UP\":\n",
+    "            i, j = i - 1, j\n",
+    "        elif command == \"DOWN\":\n",
+    "            i, j = i + 1, j\n",
+    "        elif command == \"RIGHT\":\n",
+    "            i, j = i, j + 1\n",
+    "        else:\n",
+    "            i, j = i, j - 1\n",
+    "\n",
+    "    return N * i + j\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert finalPositionOfSnake(2, [\"RIGHT\",\"DOWN\"]) == 3\n",
+    "assert finalPositionOfSnake(3, [\"DOWN\",\"RIGHT\",\"UP\"]) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13002719",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countGoodNodes(edges: list[list[int]]) -> int:\n",
+    "    # Convert edges into Adjl\n",
+    "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for n1, n2 in edges:\n",
+    "        adjl[n1].append(n2)\n",
+    "        adjl[n2].append(n1)\n",
+    "\n",
+    "    # Do a recursive call to check if node is good\n",
+    "    count = 0\n",
+    "    def backtrack(curr: int, prev: int) -> int:\n",
+    "        nonlocal count\n",
+    "        subtree_counts: list[int] = []\n",
+    "        for next_ in adjl[curr]:\n",
+    "            if next_ != prev:\n",
+    "                subtree_counts.append(backtrack(next_, curr))\n",
+    "        count += len(set(subtree_counts)) <= 1\n",
+    "        return 1 + sum(subtree_counts)\n",
+    "\n",
+    "\n",
+    "    backtrack(0, -1)\n",
+    "    return count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countGoodNodes([[2,0],[4,2],[1,2],[3,1],[5,1]]) == 5\n",
+    "assert countGoodNodes([[0,1],[0,2],[1,3],[1,4],[2,5],[2,6]]) == 7\n",
+    "assert countGoodNodes([[0,1],[1,2],[2,3],[3,4],[0,5],[1,6],[2,7],[3,8]]) == 6\n",
+    "assert countGoodNodes([[0,1],[1,2],[1,3],[1,4],[0,5],[5,6],[6,7],[7,8],[0,9],[9,10],[9,12],[10,11]]) == 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a621f38b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3\n",
+    "def countPairs(nums: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, L: int, R: int) -> int:\n",
+    "        if i == N - 1:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            result = 0\n",
+    "            for n1 in range(L, nums[i + 1] + 1):\n",
+    "                n2 = nums[i + 1] - n1\n",
+    "                if n2 <= R:\n",
+    "                    result += backtrack(i + 1, n1, n2)\n",
+    "            return result % MOD\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    MOD = 10 ** 9 +7\n",
+    "    return backtrack(-1, 0, nums[0])\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countPairs([2,3,2]) == 4\n",
+    "assert countPairs([5,5,5,5]) == 126"
+   ]
   }
  ],
  "metadata": {
