--- a/practice/007.ipynb
+++ b/practice/007.ipynb
@@ -2769,6 +2769,7 @@
      "iopub.status.idle": "2024-08-12T14:40:18.972061Z",
      "shell.execute_reply": "2024-08-12T14:40:18.971452Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.437192,
      "end_time": "2024-08-12T14:40:18.973676",
@@ -2807,6 +2808,97 @@
     "\n",
     "# Testing the solution\n",
     "assert classy_nums([(1000000000000000000, 1000000000000000000), (1, 1000), (1024, 1024), (65536, 65536), (999999, 1000001), (6322, 6351)]) == [1, 1000, 1, 0, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46faeb54",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def QAQ(S: str) -> int:\n",
+    "    N = len(S)\n",
+    "    target: str = \"QAQ\"\n",
+    "    dp: list[int] = [0 if j < 3 else 1 for j in range(4)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(3):\n",
+    "            if S[i] == target[j]:\n",
+    "                dp[j] += dp[j + 1]\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert QAQ(\"QAQAQYSYIOIWIN\") == 4\n",
+    "assert QAQ(\"QAQQQZZYNOIWIN\") == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e616d7c6",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def napolean_cake(N: int, cream: list[int]) -> list[int]:\n",
+    "    cake: list[int] = [0] * N\n",
+    "    cream_penetrated: int = N\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        cream_penetrated = min(cream_penetrated, i - cream[i] + 1)\n",
+    "        if cream_penetrated <= i:\n",
+    "            cake[i] = 1\n",
+    "\n",
+    "    return cake\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert napolean_cake(6, [0,3,0,0,1,3]) == [1,1,0,1,1,1]\n",
+    "assert napolean_cake(10, [0,0,0,1,0,5,0,0,0,2]) == [0,1,1,1,1,1,0,0,1,1]\n",
+    "assert napolean_cake(3, [0,0,0]) == [0,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21c911e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def red_and_blue(N: int, red_sequence: list[int], M: int, blue_sequence: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Not my own solution.\n",
+    "\n",
+    "    Accumulate values in first seq (order doesn't matter), each time we check and update max\n",
+    "\n",
+    "    Iterate through next seq, this time we start with acc as result, since we can imagine\n",
+    "    having accumulated whatever max we had obtained so far as left side of function `f`, all\n",
+    "    values to right of the red_sequence would be put at the 'last' (not be part of max portion of f)\n",
+    "\n",
+    "    Repeat for sec seq to see if we can somehow increase the result.\n",
+    "    \"\"\"\n",
+    "    result = 0\n",
+    "\n",
+    "    acc = 0\n",
+    "    for n in red_sequence:\n",
+    "        acc += n\n",
+    "        result = max(acc, result)\n",
+    "\n",
+    "    acc = result\n",
+    "    for n in blue_sequence:\n",
+    "        acc += n\n",
+    "        result = max(acc, result)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert red_and_blue(4, [6,-5,7,-3], 3, [2,3,-4]) == 13\n",
+    "assert red_and_blue(5, [-1,-2,-3,-4,-5], 5, [-1,-2,-3,-4,-5]) == 0\n",
+    "assert red_and_blue(2, [1,1], 4, [10,-3,2,2]) == 13\n",
+    "assert red_and_blue(1, [0], 1, [0]) == 0\n",
+    "assert red_and_blue(8, [2,1,-3,1,0,2,0,0], 7, [3,-3,-4,-3,4,3,1]) == 6"
    ]
   }
  ],
