CF: Div 3 - 13th Aug

--- a/practice/007.ipynb
+++ b/practice/007.ipynb
@@ -2899,6 +2899,7 @@
      "iopub.status.idle": "2024-08-13T03:27:28.232262Z",
      "shell.execute_reply": "2024-08-13T03:27:28.231783Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016337,
      "end_time": "2024-08-13T03:27:28.233483",
@@ -2942,6 +2943,146 @@
     "assert red_and_blue(2, [1,1], 4, [10,-3,2,2]) == 13\n",
     "assert red_and_blue(1, [0], 1, [0]) == 0\n",
     "assert red_and_blue(8, [2,1,-3,1,0,2,0,0], 7, [3,-3,-4,-3,4,3,1]) == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee92caf3",
+   "metadata": {},
+   "source": [
+    "CF Div 3 - 13th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f08d3512",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def primary_task(S: str) -> bool:\n",
+    "    exp: str = S[2:]\n",
+    "    base_check: bool = S[:2] == \"10\"\n",
+    "    exp_check = not exp.startswith(\"0\") and (exp != \"\" and int(exp) >= 2)\n",
+    "    return base_check and exp_check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53564e24",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def seating_in_bus(N: int, chrono: list[int]) -> bool:\n",
+    "    seats: set[int] = set()\n",
+    "    for seat in chrono:\n",
+    "        if seats and seat - 1 not in seats and seat + 1 not in seats:\n",
+    "            return False\n",
+    "        seats.add(seat)\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebc67e79",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def numeric_string_template(N: int, template: list[int], M: int, strings: list[str]) -> list[bool]:\n",
+    "    str2int: dict[str, int] = dict()\n",
+    "    int2str: dict[int, str] = dict()\n",
+    "    results: list[bool] = []\n",
+    "    for string in strings:\n",
+    "        if len(string) != N:\n",
+    "            results.append(False)\n",
+    "        else:\n",
+    "            result = True\n",
+    "            for i, ch in enumerate(string):\n",
+    "                if (\n",
+    "                        (ch not in str2int and template[i] not in int2str) or\n",
+    "                        (str2int[ch] == template[i] and int2str[template[i]] == ch)\n",
+    "                ):\n",
+    "                    str2int[ch], int2str[template[i]] = template[i], ch\n",
+    "                else:\n",
+    "                    result = False\n",
+    "                    break\n",
+    "            results.append(result)\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a0d2124",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def right_left_wrong(N: int, int_strips: list[int], ch_strips: str) -> int:\n",
+    "    # Calculate prefix sum\n",
+    "    pre: list[int] = list(itertools.accumulate(int_strips, lambda a, b: a + b))\n",
+    "    total, i, j = 0, 0, N - 1\n",
+    "    while i < j:\n",
+    "        while ch_strips[i] != 'L':\n",
+    "            i += 1\n",
+    "        while ch_strips[j] != 'R':\n",
+    "            j -= 1\n",
+    "        if i < j:\n",
+    "            total += pre[j] - (pre[i - 1] if i > 0 else 0)\n",
+    "            i, j = i + 1, j - 1\n",
+    "    return total\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert right_left_wrong(5, [1,2,3,4,5], \"LRLRR\") == 22\n",
+    "assert right_left_wrong(2, [3,9], \"RL\") == 0\n",
+    "assert right_left_wrong(2, [2,8], \"LR\") == 10\n",
+    "assert right_left_wrong(6, [3,5,1,4,3,2], \"LRLLLR\") == 18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86dc5094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gorilla_photoshoot(N: int, M: int, K: int, W: int, heights: list[int]) -> int:\n",
+    "    slots: collections.defaultdict[int, int] = collections.defaultdict(int)\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            i_start, i_end = max(0, i - K + 1), min(i, N - K)\n",
+    "            j_start, j_end = max(0, j - K + 1), min(j, M - K)\n",
+    "            slide_i, slide_j = i_end - i_start + 1, j_end - j_start + 1\n",
+    "            slots[slide_i * slide_j] += 1\n",
+    "\n",
+    "    # Sort the slots and heights by decreasing cost\n",
+    "    slots_order: list[tuple[int, int]] = sorted(slots.items())\n",
+    "    heights.sort()\n",
+    "\n",
+    "    # Assign slots to taller gorillas first\n",
+    "    spectacle = 0\n",
+    "    while heights:\n",
+    "        factor, slot_count = slots_order.pop()\n",
+    "        while heights and slot_count:\n",
+    "            spectacle += factor * heights.pop()\n",
+    "            slot_count -= 1\n",
+    "    return spectacle\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert gorilla_photoshoot(3, 4, 2, 9, [1] * 9) == 21\n",
+    "assert gorilla_photoshoot(9, 5, 5, 6, [6,7,14,16,16,6]) == 319\n",
+    "assert gorilla_photoshoot(1984, 1, 1, 4, [5,4,1499,2004]) == 3512\n",
+    "assert gorilla_photoshoot(20, 15, 7, 9, [4,1,4,5,6,1,1000000000,898,777]) == 49000083104\n",
+    "assert gorilla_photoshoot(2, 1, 1, 2, [5,7]) == 12"
    ]
   }
  ],
