CP Practice - 16th Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -247,6 +247,7 @@
      "iopub.status.idle": "2024-08-15T16:56:22.415266Z",
      "shell.execute_reply": "2024-08-15T16:56:22.414784Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.006377,
      "end_time": "2024-08-15T16:56:22.416449",
@@ -265,6 +266,133 @@
     "assert closest_point(2, [3,8]) == True\n",
     "assert closest_point(2, [5,6]) == False\n",
     "assert closest_point(6, [1,2,3,4,5,10]) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8673e525",
+   "metadata": {},
+   "source": [
+    "Upsolvng CF Contest - Div 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b5a343d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def game_with_doors(AL: int, AR: int, BL: int, BR: int) -> int:\n",
+    "    \"\"\"\n",
+    "    For the overlapping portion, all doors must be closed\n",
+    "    For non overlapping portion, suffices to close just one door at each side\n",
+    "    \"\"\"\n",
+    "    # Check for overlap\n",
+    "    oL, oR = max(AL, BL), min(AR, BR)\n",
+    "    if oL <= oR:\n",
+    "        locks = oR - oL\n",
+    "        if abs(AL - BL) > 0:\n",
+    "            locks += 1\n",
+    "        if abs(AR  - BR) > 0:\n",
+    "            locks += 1\n",
+    "        return locks\n",
+    "    else:\n",
+    "        return 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert game_with_doors(1, 2, 3, 4) == 1\n",
+    "assert game_with_doors(2, 5, 2, 5) == 3\n",
+    "assert game_with_doors(3, 7, 6, 7) == 2\n",
+    "assert game_with_doors(4, 5, 2, 8) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f33a487",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def splitting_items(N: int, K: int, costs: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    * Playing optimally implies that\n",
+    "        - Alice tries to pick up the largest costing item available\n",
+    "        - Bob picks up the largest costing item available\n",
+    "        - Alice picks up items at odd indices, Bob at even indices (post sorting)\n",
+    "    * To minimize `A - B`, Bob should increase cost of items at even indices\n",
+    "    * We can update delta on the fly until K > 0\n",
+    "    \"\"\"\n",
+    "    costs.sort()\n",
+    "    result = 0\n",
+    "    while costs:\n",
+    "        delta = costs.pop() - (costs.pop() if costs else 0)\n",
+    "        if K < delta:\n",
+    "            result += delta - K\n",
+    "        K = max(0, K - delta)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert splitting_items(3, 0, [10, 15, 12]) == 13\n",
+    "assert splitting_items(2, 5, [1, 10]) == 4\n",
+    "assert splitting_items(4, 6, [3, 1, 2, 4]) == 0\n",
+    "assert splitting_items(2, 4, [6, 9]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2923864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def colored_portals(N: int, Q: int, cities: list[str], queries: list[tuple[int, int]]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    If cities of i, j share a common color, shortest path to reach would abs(i - j)\n",
+    "    Otherwise, we check for common colors between target:\n",
+    "        - If no common colors return -1\n",
+    "        - Elif if there exists a common point between i, j return abs(i - j)\n",
+    "        - Else search for points to left of i and right i with common portal and check both distances, return least of two (use binary search)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Store to hashmap for quick lookup times\n",
+    "    portal_groups: collections.defaultdict[str, list] = collections.defaultdict(list)\n",
+    "    for i, portal_type in enumerate(cities):\n",
+    "        portal_groups[portal_type].append(i)\n",
+    "\n",
+    "    # Process the queries\n",
+    "    results: list[int] = []\n",
+    "    for i, j in queries:\n",
+    "        a, b, c, d = cities[i - 1][0], cities[i - 1][1], cities[j - 1][0], cities[j - 1][1]\n",
+    "\n",
+    "        # All 4 distinct portals\n",
+    "        if a != b != c != d:\n",
+    "            # Check for common colors\n",
+    "            distance = math.inf\n",
+    "            for comb in [(a, c), (a, d), (b, c), (b, d)]:\n",
+    "                common = \"\".join(sorted(comb))\n",
+    "                idx = bisect.bisect(portal_groups[common], i)\n",
+    "                left, right = idx - 1, idx\n",
+    "                if 0 <= left < len(portal_groups[common]):\n",
+    "                    distance = min(distance, abs(left - i) + abs(left - j))\n",
+    "\n",
+    "                if 0 <= right < len(portal_groups[common]):\n",
+    "                    distance = min(distance, abs(right - i) + abs(right - j))\n",
+    "\n",
+    "            results.append(int(distance) if not math.isinf(distance) else -1)\n",
+    "\n",
+    "        else:\n",
+    "           results.append(j - i)\n",
+    "\n",
+    "    return results\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert colored_portals(4, 5, [\"BR\",\"BR\",\"GY\",\"GR\"], [(1,2), (3,1), (4,4), (1,4), (4,2)]) == [1,4,0,3,2]"
    ]
   }
  ],
