CP Practice - 17th Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -38,6 +38,7 @@
     "import tqdm\n",
     "import bisect\n",
     "import heapq\n",
+    "import operator\n",
     "\n",
     "conn = sqlite3.connect(\":memory:\")\n",
     "\n",
@@ -330,10 +331,13 @@
     "    costs.sort()\n",
     "    result = 0\n",
     "    while costs:\n",
-    "        delta = costs.pop() - (costs.pop() if costs else 0)\n",
-    "        if K < delta:\n",
-    "            result += delta - K\n",
-    "        K = max(0, K - delta)\n",
+    "        if len(costs) >= 2:\n",
+    "            delta = costs.pop() - costs.pop()\n",
+    "            if K < delta:\n",
+    "                result += delta - K\n",
+    "            K = max(0, K - delta)\n",
+    "        else:\n",
+    "            result += costs.pop()\n",
     "\n",
     "    return result\n",
     "\n",
@@ -341,14 +345,17 @@
     "assert splitting_items(3, 0, [10, 15, 12]) == 13\n",
     "assert splitting_items(2, 5, [1, 10]) == 4\n",
     "assert splitting_items(4, 6, [3, 1, 2, 4]) == 0\n",
-    "assert splitting_items(2, 4, [6, 9]) == 0"
+    "assert splitting_items(2, 4, [6, 9]) == 0\n",
+    "assert splitting_items(3, 1, [1, 1, 1]) == 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a2923864",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def colored_portals(N: int, Q: int, cities: list[str], queries: list[tuple[int, int]]) -> list[int]:\n",
@@ -368,31 +375,64 @@
     "    # Process the queries\n",
     "    results: list[int] = []\n",
     "    for i, j in queries:\n",
-    "        a, b, c, d = cities[i - 1][0], cities[i - 1][1], cities[j - 1][0], cities[j - 1][1]\n",
+    "        i, j = i - 1, j - 1\n",
+    "        a, b, c, d = cities[i][0], cities[i][1], cities[j][0], cities[j][1]\n",
     "\n",
     "        # All 4 distinct portals\n",
-    "        if a != b != c != d:\n",
-    "            # Check for common colors\n",
+    "        if len(set([a, b, c, d])) == 4:\n",
     "            distance = math.inf\n",
     "            for comb in [(a, c), (a, d), (b, c), (b, d)]:\n",
     "                common = \"\".join(sorted(comb))\n",
     "                idx = bisect.bisect(portal_groups[common], i)\n",
     "                left, right = idx - 1, idx\n",
     "                if 0 <= left < len(portal_groups[common]):\n",
-    "                    distance = min(distance, abs(left - i) + abs(left - j))\n",
+    "                    distance = min(distance, abs(portal_groups[common][left] - i) + abs(portal_groups[common][left] - j))\n",
     "\n",
     "                if 0 <= right < len(portal_groups[common]):\n",
-    "                    distance = min(distance, abs(right - i) + abs(right - j))\n",
+    "                    distance = min(distance, abs(portal_groups[common][right] - i) + abs(portal_groups[common][right] - j))\n",
     "\n",
     "            results.append(int(distance) if not math.isinf(distance) else -1)\n",
     "\n",
+    "        # Atleast one color in common\n",
     "        else:\n",
-    "           results.append(j - i)\n",
+    "           results.append(abs(j - i))\n",
     "\n",
     "    return results\n",
     "\n",
     "# Testing the solution\n",
+    "assert colored_portals(6, 6, [\"RY\", \"RY\", \"GY\", \"RY\", \"GB\", \"RY\"], [(2,5), (4,5), (1,4), (4,1), (5,4), (5,2)]) == [3,3,3,3,3,3]\n",
+    "assert colored_portals(9, 3, [\"RY\", \"RY\", \"BR\", \"BR\", \"BR\", \"BR\", \"GY\", \"GY\", \"RY\"], [(3,7), (2,5), (6,7)]) == [6,3,5]\n",
     "assert colored_portals(4, 5, [\"BR\",\"BR\",\"GY\",\"GR\"], [(1,2), (3,1), (4,4), (1,4), (4,2)]) == [1,4,0,3,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb4a0d4d",
+   "metadata": {},
+   "source": [
+    "Find MEX of a set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3def0aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MEX(N: int, nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    There is a more optimized version for cases where nums are frequently updated.\n",
+    "    \"\"\"\n",
+    "    xor = functools.reduce(operator.xor, nums, 0)\n",
+    "    missing = functools.reduce(operator.xor, range(N), xor)\n",
+    "    return missing\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert MEX(5, [0,2,3,4]) == 1\n",
+    "assert MEX(3, [1,2]) == 0\n",
+    "assert MEX(3, [2,0]) == 1\n",
+    "assert MEX(4, [2,0,1]) == 3"
    ]
   }
  ],
