--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -484,6 +484,7 @@
      "iopub.status.idle": "2024-08-17T06:57:42.431095Z",
      "shell.execute_reply": "2024-08-17T06:57:42.430640Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.007698,
      "end_time": "2024-08-17T06:57:42.432209",
@@ -508,6 +509,97 @@
     "assert MEX(3, [1,2]) == 0\n",
     "assert MEX(3, [2,0]) == 1\n",
     "assert MEX(4, [2,0,1]) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da4aab78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Leetcode Weekly: 18th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e75c57f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countKConstraintSubstrings(S: str, K: int) -> int:\n",
+    "    N = len(S)\n",
+    "    total = 0\n",
+    "    for i in range(N):\n",
+    "        zeros = ones = 0\n",
+    "        for j in range(i, N):\n",
+    "            if S[j] == '1':\n",
+    "                ones += 1\n",
+    "            else:\n",
+    "                zeros += 1\n",
+    "            if ones <= K or zeros <= K:\n",
+    "                total += 1\n",
+    "            else:\n",
+    "                break\n",
+    "    return total\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countKConstraintSubstrings(\"10101\", 1) == 12\n",
+    "assert countKConstraintSubstrings(\"1010101\", 2) == 25\n",
+    "assert countKConstraintSubstrings(\"11111\", 1) == 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d07f83c8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxEnergyBoost(energyDrinkA: list[int], energyDrinkB: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, prev: int = 0) -> int:\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            max_energy = backtrack(i + 1, 0)\n",
+    "            if prev != 2:\n",
+    "                max_energy = max(max_energy, energyDrinkA[i] + backtrack(i + 1, 1))\n",
+    "            if prev != 1:\n",
+    "                max_energy = max(max_energy, energyDrinkB[i] + backtrack(i + 1, 2))\n",
+    "            return max_energy\n",
+    "\n",
+    "    N = len(energyDrinkA)\n",
+    "    return backtrack(0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxEnergyBoost([1,3,1], [3,1,1]) == 5\n",
+    "assert maxEnergyBoost([4,1,1], [1,1,3]) == 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f03799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Didn't bother to submit, definitely TLE\n",
+    "def largestPalindromeBrute(N: int, K: int) -> str:\n",
+    "    for i in range(int('9' * N), int('1' * N) - 1, -1):\n",
+    "        if str(i) == str(i)[::-1] and i % K == 0:\n",
+    "            return str(i)\n",
+    "    return \"\"\n",
+    "\n",
+    "# Testing the solution\n",
+    "for j in range(1, 10):\n",
+    "    for i in range(1, 5):\n",
+    "        print(i, j, largestPalindromeBrute(i, j))"
    ]
   }
  ],
