CP Practice - 19th Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -626,6 +626,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cfb5d9c",
+   "metadata": {},
+   "source": [
+    "CP Practice - 19th Aug 2024"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "24f03799",
@@ -635,13 +643,6 @@
      "iopub.status.busy": "2024-08-18T04:08:02.606144Z",
      "iopub.status.idle": "2024-08-18T04:08:02.612972Z",
      "shell.execute_reply": "2024-08-18T04:08:02.612471Z"
-    },
-    "papermill": {
-     "duration": 0.011205,
-     "end_time": "2024-08-18T04:08:02.614150",
-     "exception": false,
-     "start_time": "2024-08-18T04:08:02.602945",
-     "status": "completed"
     },
     "tags": []
    },
@@ -690,17 +691,40 @@
     }
    ],
    "source": [
-    "# Didn't bother to submit, definitely TLE\n",
-    "def largestPalindromeBrute(N: int, K: int) -> str:\n",
-    "    for i in range(int('9' * N), int('1' * N) - 1, -1):\n",
-    "        if str(i) == str(i)[::-1] and i % K == 0:\n",
-    "            return str(i)\n",
-    "    return \"\"\n",
+    "def learning_languages(N: int, M: int, languages_known: list[tuple[int, list[int]]]) -> int:\n",
+    "    # Store the speakers who speak a particular language\n",
+    "    language_speakers: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for employee, (count, languages) in enumerate(languages_known):\n",
+    "        for language in languages:\n",
+    "            language_speakers[language].append(employee)\n",
+    "\n",
+    "    # Perform a DFS traversal, we need to count the number of distinct groups\n",
+    "    visited: set[int] = set()\n",
+    "    know_nothings, groups = 0, 0\n",
+    "    for i in range(N):\n",
+    "        if i not in visited:\n",
+    "            if languages_known[i][0]:\n",
+    "                groups += 1\n",
+    "                stack: list[int] = [i]\n",
+    "                visited.add(i)\n",
+    "                while stack:\n",
+    "                    emp = stack.pop()\n",
+    "                    for language in languages_known[emp][1]:\n",
+    "                        for next_emp in language_speakers[language]:\n",
+    "                            if next_emp not in visited:\n",
+    "                                stack.append(next_emp)\n",
+    "                                visited.add(next_emp)\n",
+    "            else:\n",
+    "                know_nothings += 1\n",
+    "\n",
+    "    return max(groups - 1, 0) + know_nothings\n",
     "\n",
     "# Testing the solution\n",
-    "for j in range(1, 10):\n",
-    "    for i in range(1, 5):\n",
-    "        print(i, j, largestPalindromeBrute(i, j))"
+    "assert learning_languages(8, 7, [(0, []), (3, [1,2,3]), (1, [1]), (2, [5,4]), (2, [6,7]), (1, [3]), (2, [7,4]), (1, [1])]) == 2\n",
+    "assert learning_languages(2, 2, [(1, [2]), (0, [])]) == 1\n",
+    "assert learning_languages(5, 5, [(1, [2]), (2, [2,3]), (2, [3,4]), (2, [4,5]), (1, [5])]) == 0\n",
+    "assert learning_languages(2, 2, [(0, []), (0, [])]) == 2\n",
+    "assert learning_languages(3, 2, [(0, []), (1, [1]), (1, [2])]) == 2"
    ]
   }
  ],
