Touch LC - 20th Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -653,6 +653,7 @@
      "iopub.status.idle": "2024-08-19T17:20:40.766134Z",
      "shell.execute_reply": "2024-08-19T17:20:40.765622Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011636,
      "end_time": "2024-08-19T17:20:40.767342",
@@ -698,6 +699,47 @@
     "assert learning_languages(5, 5, [(1, [2]), (2, [2,3]), (2, [3,4]), (2, [4,5]), (1, [5])]) == 0\n",
     "assert learning_languages(2, 2, [(0, []), (0, [])]) == 2\n",
     "assert learning_languages(3, 2, [(0, []), (1, [1]), (1, [2])]) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc3a283c",
+   "metadata": {},
+   "source": [
+    "CP Practice - 20th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee7bcd84",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countSeniors(details: list[str]) -> int:\n",
+    "    return sum(map(lambda x: int(x[11:13]) > 60, details))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countSeniors([\"7868190130M7522\",\"5303914400F9211\",\"9273338290F4010\"]) == 2\n",
+    "assert countSeniors([\"1313579440F2036\",\"2921522980M5644\"]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "367a5efa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def canBeEqual(target: list[int], arr: list[int]) -> bool:\n",
+    "    return collections.Counter(target) == collections.Counter(arr)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert canBeEqual([1,2,3,4], [2,4,1,3]) == True\n",
+    "assert canBeEqual([7], [7]) == True\n",
+    "assert canBeEqual([3,7,9], [3,7,11]) == False"
    ]
   }
  ],
