CP Practice - 21st Aug 2024

--- a/practice/008.ipynb
+++ b/practice/008.ipynb
@@ -760,6 +760,7 @@
      "iopub.status.idle": "2024-08-20T17:13:12.748970Z",
      "shell.execute_reply": "2024-08-20T17:13:12.748426Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.008075,
      "end_time": "2024-08-20T17:13:12.750068",
@@ -778,6 +779,43 @@
     "assert canBeEqual([1,2,3,4], [2,4,1,3]) == True\n",
     "assert canBeEqual([7], [7]) == True\n",
     "assert canBeEqual([3,7,9], [3,7,11]) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68af6611",
+   "metadata": {},
+   "source": [
+    "CP Practice: 21th Aug 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8adcadba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bertown_subway(N: int, stations: list[int]) -> int:\n",
+    "    # Compute the number of disjoint stations\n",
+    "    groups: collections.defaultdict[int, set[int]] = collections.defaultdict(set)\n",
+    "    color: int = 0\n",
+    "    visited: set[int] = set()\n",
+    "    for i in range(N):\n",
+    "        if i not in visited:\n",
+    "            curr, color = i, color + 1\n",
+    "            while curr not in visited:\n",
+    "                visited.add(curr)\n",
+    "                groups[color].add(curr)\n",
+    "                curr = stations[curr] - 1\n",
+    "\n",
+    "    # We can combine any two groups - to maximize, join the last two groups\n",
+    "    group_sizes: list[int] = sorted(map(len, groups.values()))\n",
+    "    return sum(map(lambda x: x ** 2, group_sizes[:-2])) + sum(group_sizes[-2:]) ** 2\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert bertown_subway(5, [1,5,4,3,2]) == 17\n",
+    "assert bertown_subway(3, [2,1,3]) == 9"
    ]
   }
  ],
